syntax = "proto3";

option csharp_namespace = "GrpcAccountClient";

package HealthChecks;

service HealthChecks{
	rpc ReadinessHealthCheck (ReadinessHealthCheckInput) returns (ReadinessHealthCheckOutput);
}

message ServiceReadiness{
	string service_name = 1;
	string service_version = 2;
	string service_description = 3;
	string service_is_ready = 4;
}

message ReadinessHealthCheckOutput {
	string ready = 1;
	repeated ServiceReadiness services = 2;
}

message ReadinessHealthCheckInput {
}